# transcendia

./: CHANGELOG.md  README.md  config.html  index.html  models.html  overlay.html  package-lock.json  package.json  pnpm-lock.yaml  select.html  tsconfig.json  vite.config.ts
src/: App.vue  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  errors.rs  events.rs  lib.rs  main.rs  monitors.rs  ocr_models.rs  systray.rs  translate_runtime.rs  windows.rs
src-tauri/src/runtime/: mod.rs  ocr.rs  ocr_models.rs  runtime.rs  translate_runtime.rs  translations.rs
src/ConfigWindow/: App.vue  Config.vue  languages.ts  main.ts
src/DownloadModels/: DownloadProgress.vue  main.ts
src/OverlayWindow/: App.vue  Overlay.vue  main.ts
src/SelectWindow/: SelectRegion.vue  main.ts
src/components/: CustomButton.vue  CustomColorSelect.vue  CustomInput.vue  CustomSelect.vue  Progress.vue
src/types/: config.ts  download.ts  events.ts
