[package]
name = "transcendia"
version = "1.0.0-beta.2"
description = "An app to translate in realtime a section of your screen"
authors = ["you"]
edition = "2021"
license = "AGPL-3.0"

[lib]
name = "transcendia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["macos-private-api", "tray-icon", "unstable"] }
tauri-plugin-shell = "2.3"
tauri-plugin-process = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "time"] }
tokio-macros = "2.5"
xcap = "0.7"
image = "0.25"
ocrs = "0.10"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
rten = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3"

[profile.dev]
incremental = true

[profile.dev.package.ocrs]
opt-level = 3

[profile.dev.package.rten]
opt-level = 3

[profile.dev.package.rten-base]
opt-level = 3

[profile.dev.package.rten-gemm]
opt-level = 3

[profile.dev.package.rten-simd]
opt-level = 3

[profile.dev.package.rten-tensor]
opt-level = 3

[profile.dev.package.rten-vecmath]
opt-level = 3

[profile.dev.package.rten-imageproc]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
